name:                libp2p-swarm
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/MatrixAI/haskell-libp2p-swarm#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.LibP2P.Swarm
                     , Network.LibP2P.TCP
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hs-multiaddr
                     , io-streams
                     , iproute
                     , network
                     , text
  default-language:    Haskell2010

test-suite libp2p-swarm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , libp2p-swarm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-libp2p-swarm
